<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".view.register.RegisterFragment">

    <ImageView
        android:layout_marginTop="64dp"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_chat"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <LinearLayout
        android:layout_below="@+id/logo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_edt_username"
            android:inputType="textAutoComplete"
            android:hint="@string/user_name"
            style="@style/edtStyle" />

        <EditText
            android:id="@+id/reg_edt_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/edtStyle" />

        <EditText
            android:id="@+id/reg_edt_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/edtStyle" />

        <Button
            android:layout_marginTop="24dp"
            android:id="@+id/reg_btnRegis"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rounded_4dp"
            />

    </LinearLayout>


</RelativeLayout>